# id-card-reader

./: .gitignore  Makefile  README.md  scanner.c  scanner.h  test.cc
controller/: CMakeLists.txt  Makefile  controller  controller.cc  device.h  enroll.cc  query.cc
include/: common.h  record.h  utility.h
scanner/: Makefile  scan.c  scan.h  scanner  scanner.cc
